<resources>
    <string name="app_name">My Application</string>
    <string name="medium">M</string>
    <string name="next">Next</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="add_to_cart1">Add To Cart</string>
    <string name="st1">L</string>
    <string name="st2">S</string>
    <string name="st3">Size</string>
    <string name="st4">Equal parts espresso, steamed milk, and milk foam. Known for its rich, velvety texture and balanced flavor.</string>
    <string name="st5">Desctiption</string>
    <string name="st6">RS.480.00</string>
    <string name="st7">With Oat Milk</string>
    <string name="st8">Cuppuccino</string>
    <string name="s1">passe</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="fogot_password">Fogot Password</string>
    <string name="login">Login</string>
    <string name="dont_you_have_acount">Dont you have acount?</string>
    <string name="signup">Signup</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="americano">Americano</string>
    <string name="latte">Latte</string>
    <string name="cappucinno">Cappucinno</string>
    <string name="with_oat_milk">With oat milk</string>
    <string name="rs_700">Rs.700</string>
    <string name="with_milk">With milk</string>
</resources>