<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E9DFDA"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="1dp"
                android:layout_height="85dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                app:srcCompat="@drawable/logo" />

            <ImageButton
                android:id="@+id/cartbtn"
                android:layout_width="1dp"
                android:contentDescription="@string/s1"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                app:srcCompat="@drawable/cart2" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="10dp"
                android:layout_height="70dp"
                android:layout_marginLeft="-50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="-25dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/pphoto" />

        </LinearLayout>

                <SearchView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_searchview"
                    android:queryHint="Find your coffee" />



                <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:backgroundTint="@color/btn"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/cappuccino" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:backgroundTint="@color/btn"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:text="@string/americano" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:backgroundTint="@color/btn"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:text="@string/latte" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:padding="16dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="wrap_content"
                    android:layout_height="117dp"
                    app:srcCompat="@drawable/cap" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="120dp"
                    android:text="@string/cappucinno"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="150dp"
                    android:text="@string/with_oat_milk"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="110dp"
                    android:layout_marginTop="120dp"
                    android:text="Rs.800" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:padding="16dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">
                <!-- Add content inside the CardView here -->

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="110dp"
                    android:layout_marginTop="120dp"
                    android:text="@string/rs_700" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="150dp"
                    android:text="@string/with_milk"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/textView188"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="120dp"
                    android:text="Americano"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    app:srcCompat="@drawable/latte" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <!-- Horizontal LinearLayout for the last ttttttttwo CardViews -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:cardBackgroundColor="#000000">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                app:srcCompat="@drawable/banner4" />

            <TextView
                android:id="@+id/bannertext"
                android:layout_width="385dp"
                android:layout_height="59dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:text="GET 40% OFFER THIS WEEKEND "
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">
                <!-- Add content inside the CardView here -->
                <TextView
                    android:id="@+id/textView91"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="150dp"
                    android:text="With oat milk"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/textView103"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="110dp"
                    android:layout_marginTop="123dp"
                    android:text="Rs.900" />

                <TextView
                    android:id="@+id/textView85"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="122dp"
                    android:text="Latte"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="wrap_content"
                    android:layout_height="122dp"
                    app:srcCompat="@drawable/mocha" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">
                <!-- Add content inside the CardView here -->
                <TextView
                    android:id="@+id/textView101"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="110dp"
                    android:layout_marginTop="120dp"
                    android:text="Rs.500" />

                <TextView
                    android:id="@+id/textView99"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="150dp"
                    android:text="With milk"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/textView88"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="122dp"
                    android:text="Black Coffee"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="wrap_content"
                    android:layout_height="116dp"
                    app:srcCompat="@drawable/cof" />
            </androidx.cardview.widget.CardView>


        </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="15dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="180dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        app:cardBackgroundColor="#FFFFFF"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="4dp">
                        <TextView
                            android:id="@+id/textView911"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="150dp"
                            android:text="With oat milk"
                            android:textSize="10sp" />

                        <TextView
                            android:id="@+id/textView1033"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="110dp"
                            android:layout_marginTop="123dp"
                            android:text="Rs.900" />

                        <TextView
                            android:id="@+id/textView855"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="122dp"
                            android:text="Americano"
                            android:textColor="#000000"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/imageView122"
                            android:layout_width="wrap_content"
                            android:layout_height="122dp"
                            app:srcCompat="@drawable/cupp1" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="180dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        app:cardBackgroundColor="#FFFFFF"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="4dp">

                        <TextView
                            android:id="@+id/textView1011"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="110dp"
                            android:layout_marginTop="120dp"
                            android:text="Rs.500" />

                        <TextView
                            android:id="@+id/textView999"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="150dp"
                            android:text="With milk"
                            android:textSize="10sp" />

                        <TextView
                            android:id="@+id/textView888"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="122dp"
                            android:text="Ice Coffee"
                            android:textColor="#000000"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/imageView115"
                            android:layout_width="wrap_content"
                            android:layout_height="116dp"
                            app:srcCompat="@drawable/cupp2" />
                    </androidx.cardview.widget.CardView>


                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
